--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,18 @@
+@font-face {
+	font-family:'SF Pro Icons';
+	font-style:normal;
+	font-weight:700;
+	src:local('☺'), url("/assets/fonts/sf-pro-icons_bold.woff2") format("woff2"), url("/assets/fonts/sf-pro-icons_bold.woff") format("woff"), url("/assets/fonts/sf-pro-icons_bold.ttf") format("truetype");
+}
+
+@font-face {
+	font-family:'SF Pro Icons';
+	font-style:normal;
+	font-weight:400;
+	src:url('/assets/fonts/sf-pro-icons_regular.eot');
+	src:local('☺'), url("/assets/fonts/sf-pro-icons_regular.woff2") format("woff2"), url("/assets/fonts/sf-pro-icons_regular.woff") format("woff"), url("/assets/fonts/sf-pro-icons_regular.ttf") format("truetype");
+}
+
 /*-- Reset. --*/
 body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, code, form, fieldset, legend, textarea, p, blockquote, th, td, input, select, textarea, button, article, aside, details, figcaption, figure, footer, header, hgroup, menu, nav, section {
   margin: 0;
@@ -239,37 +254,31 @@ input[autocomplete="off"]::-webkit-contacts-auto-fill-button {
     height: 0;
     clip: rect(0, 0, 0, 0);
     pointer-events: none
-
 }
 
 :root {
-  --gn_height: 44px;
+  --gn_height:44px;
 }
 
 /*-- Layout --*/
 /*-- Global Header --*/
 #global_header {
+  /* z-index: 9999; */
   --gn_filter: saturate(180%) blur(20px);
   --gn_bg: rgba(251, 251, 253, 0.8);
 }
 
-body {
-  height: 500vh;
-}
-
 nav#global_navigation {
-  position: fixed;
-  /*z값은 position값이 있어야 적용됨*/
-  z-index: 9999;
-  top: 0;
-  right: 0;
-  left: 0;
-  min-width: 320px;
-  max-height: var(--gn_height);
-  background-color: var(--gn_bg);
-  /*아래 요소가 블러처리되는 효과*/
-  backdrop-filter: var(--gn_filter);
-  -webkit-backdrop-filter: var(--gn_filter);
+    position: fixed;
+    z-index: 9999;
+    top: 0;
+    right: 0;
+    left: 0;
+    min-width: 320px;
+    max-height: var(--gn_height);
+    background-color: var(--gn_bg);
+    backdrop-filter: var(--gn_filter);
+    -webkit-backdrop-filter: var(--gn_filter);
 }
 
 nav#global_navigation .gn_content {
@@ -287,10 +296,13 @@ ul#gn_list {
   margin-left: -8px;
   justify-content: space-between;
   align-items: center;
+  gap: 20px;
 }
+
 ul#gn_list li.gn_item {}
 
 ul#gn_list li.gn_item.gn_item_apple {}
+
 ul#gn_list li.gn_item.gn_item_apple a.gn_link.gn_link_apple,
 ul#gn_list li.gn_item.gn_item_search button.gn_search_button,
 ul#gn_list li.gn_item.gn_item_bag button.gn_bag_button {
@@ -298,44 +310,46 @@ ul#gn_list li.gn_item.gn_item_bag button.gn_bag_button {
   display: flex;
   width: 30px;
   height: 44px;
+  /* padding-right: 8px; */
+  /* padding-left: 8px; */
   justify-content: center;
   align-items: center;
-  /* padding-right: 8px;
-  padding-left: 8px; */
 }
-
 ul#gn_list li.gn_item.gn_item_search button.gn_search_button {
   width: 31px;
 }
 
 ul#gn_list li.gn_item.gn_item_apple a.gn_link.gn_link_apple {}
-li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image {}
 
-ul#gn_list li.gn_item.gn_item_apple a.gn_link.gn_link_apple {}
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple span.gn_link_image,
+li.gn_item.gn_item_search button.gn_search_button span.gn_search_image,
+li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_image {}
 
-li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image svg,
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple span.gn_link_image svg,
+li.gn_item.gn_item_search button.gn_search_button span.gn_search_image svg,
 li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_image svg {
   display: block;
 }
 
-ul#gn_list li.gn_item.gn_item_apple a.gn_link.gn_link_apple {}
-
-li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image svg path, 
-li.gn_item.gn_item_search button.gn_search_button span.gn_search_image svg path
- {
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple span.gn_link_image svg path,
+li.gn_item.gn_item_search button.gn_search_button span.gn_search_image svg path,
+li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_image svg path {
   fill: rgba(0, 0, 0, 0.8);
 }
 
-li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image.gn_link_image--d {}
-
-li.gn_item.gn_item_apple a.gn_link.gn_link_apple .gn_link_image.gn_link_image--m,
-li.gn_item.gn_item_search button.gn_search_button span.gn_search_image--m,
-li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_image--m
- {
-  display: none;
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple span.gn_link_image.gn_link_image--d {
+  display: block;
+  width: 14px;
+  height: 44px;
 }
 
-li.gn_item.gn_item_apple a.gn_link.gn_link_apple span.gn_link_text {text-indent: -9999rem;}
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple span.gn_link_image.gn_link_image--m,
+li.gn_item.gn_item_search button.gn_search_button span.gn_search_image.gn_search_image--m,
+li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_image.gn_bag_image--m {
+    display: none
+}
+
+li.gn_item.gn_item_apple a.gn_link.gn_link_apple span.gn_link_text {}
 
 ul#gn_list li.gn_item.gn_item_menu {
   flex-grow: 1;
@@ -344,13 +358,17 @@ ul#gn_list li.gn_item.gn_item_menu {
 ul#gn_list li.gn_item.gn_item_menu .gn_menu_flyout {
   height: 100%;
 }
+
 ul#gn_list li.gn_item.gn_item_menu .gn_menu_list {
   display: flex;
   width: 100%;
   height: 100%;
   justify-content: space-between;
+  /* display: contents; */
 }
+
 ul#gn_list li.gn_item.gn_item_menu .gn_menu_list .gn_menu_item {
+  /* display: inherit; */
 }
 
 li.gn_item.gn_item_menu .gn_menu_list .gn_menu_item a.gn_menu_link {
@@ -363,26 +381,26 @@ li.gn_item.gn_item_menu .gn_menu_list .gn_menu_item a.gn_menu_link {
   white-space: nowrap;
 }
 
-li.gn_item.gn_item_menu .gn_menu_list .gn_menu_item a.gn_menu_link span.gn_menu_link_text {}
+li.gn_item.gn_item_menu .gn_menu_list .gn_menu_item a.gn_menu_link span.gn_memu_link_text {}
 
-ul#gn_list li.gn_item.gn_item_search {}
 
-li.gn_item.gn_item_search button.gn_search_button span.gn_search_image.gn_search_image--d {}
+ul#gn_list li.gn_item.gn_item_search {
 
-li.gn_item.gn_item_search button.gn_search_button span.gn_search_text {
-  text-indent: -9999rem;
 }
+
+ul#gn_list li.gn_item.gn_item_search button.gn_search_button {
+
+}
+
+ul#gn_list li.gn_item.gn_item_search button.gn_search_button span.gn_search_image {
+  
+}
+
 
 ul#gn_list li.gn_item.gn_item_bag {}
 
-li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_image.gn_bag_image--d {}
-
-li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_text {
-  text-indent: -9999rem;
-}
-
 #gn_menu_trigger {
-  display: none;
+  display: none
 }
 
 .layout {
@@ -408,18 +426,29 @@ li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_text {
 .layout .layout_list .layout_list_wrap {
   display: flex;
   flex-wrap: wrap;
-  margin-top: -25px;
+  margin: -25px -10px;
+  /* margin-top: -10px;
   margin-right: -10px;
-  margin-bottom: -25px;
-  margin-left: -10px;
+  margin-bottom: -10px;
+  margin-left: -10px; */
 }
 
+/* .layout .layout_list .layout_item {
+  flex: 1;
+}
+
+.layout .layout_list .layout_item + .layout_item {
+  margin-left: 20px;
+} */
+
+
 .layout .layout_list .layout_item {
+  /* width: 33.3%; */
   width: 20%;
   padding: 25px 10px;
-  /* padding-top: 25px;
+  /* padding-top: 10px;
   padding-right: 10px;
-  padding-bottom: 25px;
+  padding-bottom: 10px;
   padding-left: 10px; */
 }
 
@@ -433,6 +462,10 @@ li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_text {
   line-height: 300px;
 }
 
+/*
+각 Media 사이즈마다 간격 조정하기
+*/
+
 @media only screen and (max-width: 680px) {
   /* .layout .layout_list .layout_item {
     width: 33.3%
@@ -441,81 +474,121 @@ li.gn_item.gn_item_bag button.gn_bag_button span.gn_bag_text {
 
 @media only screen and (max-width: 360px) {
   .layout .layout_list .layout_item {
-    width: 100%;
-    padding: 10px 10px;
+    width: 100%
   }
 }
 
 @media only screen and (min-width: 361px) and (max-width: 480px) {
   .layout .layout_list .layout_item {
-    width: 50%;
-    padding: 15px 20px;
+    width: 50%
   }
 }
 
 @media only screen and (min-width: 481px) and (max-width: 680px) {
   .layout .layout_list .layout_item {
-    width: 33.3%;
-    padding: 20px 15px;
+    width: 33.3%
   }
 }
 
 @media only screen and (min-width: 681px) and (max-width: 800px) {
   .layout .layout_list .layout_item {
-    width: 25%;
-    padding: 25px 10px;
+    width: 25%
   }
 }
 
-/* --main-- */
+/*-- Main --*/
+/*-- Hero Section --*/
 main#main {
-padding-top: var(--gn_height);
+  padding-top: var(--gn_height);
 }
-
-main#main section.main_section {}
-
+main#main section.main_section{}
 section#hero_section.main_section .section_content {
   position: relative;
+  display: flex;
   width: 100%;
-  height: var(--content_height);
+  height: var(--content-height);
+  flex-direction: column;
+}
+
+section#hero_section.main_section .section_content + .section_content {
+  margin-top: 14px;
+}
+
+section#hero_section.main_section #hero--vision_pro.section_content {
+  justify-content: flex-end;
 }
 
 #hero--macbook_air_15.section_content {
-  --content_height: 692px;
+  --content-height: 692px;
+  overflow: hidden;
 }
-#hero--vision_pro_15.section_content {
-  --content_height: 736px;
+#hero--vision_pro.section_content {
+  --content-height: 736px;
 }
-#hero--iPhone_14_pro.section_content {
-  --content_height: 736px;
+#hero--iphone_14_pro.section_content {
+  --content-height: 736px;
 }
+
+
 
 section.main_section a.unit_link {
   position: absolute;
+  z-index: 10;
   top: 0;
   right: 0;
   bottom: 0;
   left: 0;
-  z-index: 10;
 }
 
 section.main_section .unit_copy_wrapper {
   display: flex;
+  position: relative;
+  z-index: 1;
   width: 100%;
   padding-top: 55px;
   flex-direction: column;
+  justify-content: center;
   align-items: center;
 }
+
+section.main_section #hero--vision_pro.section_content .unit_copy_wrapper {
+  padding-bottom: 55px;
+  padding-top: initial;
+}
+
+section.main_section #hero--iphone_14_pro.section_content .unit_copy_wrapper {
+   color: white;
+}
+
+
 section.main_section .unit_copy_wrapper h2.headline {
   font-size: 56px;
   font-weight: 600;
   line-height: 60px;
 }
-section.main_section .unit_copy_wrapper h3.subhead {
+
+section.main_section .unit_copy_wrapper h2.headline + h3.subhead {
   margin-top: 3px;
 }
-section.main_section .unit_copy_wrapper h3.subhead +
-p.callout {
+
+section.main-content #hero--vision_pro.section_content .unit_copy_wrapper h2.headline.vision_pro_logo {
+  width: 235px;
+  height: 48px;
+  background-size: 235px 48px;
+  background-image: url(/assets/img/hero_logo_apple_vision_pro__ea9qv4w4cngy_mediumtall.png);
+}
+
+section.main_section .unit_copy_wrapper h3.subhead {
+  font-size: 28px;
+  font-weight: 400;
+  line-height: 31px;
+}
+
+section.main_section .unit_copy_wrapper h3.subhead + p.callout {
+  margin-top: 15px;
+}
+
+section.main_section .unit_copy_wrapper p.callout {
   margin-top: 15px;
   color: #6e6e73;
   font-size: 21px;
@@ -524,17 +597,77 @@ p.callout {
 }
 section.main_section .unit_copy_wrapper .cta_links {
   display: flex;
+  margin-top: 7px;
+  gap: 35px
 }
-section.main_section .unit_copy_wrapper .cta_links .cta_link {
+section.main_section .unit_copy_wrapper .cta_links a.cta_link {
   display: block;
+  position: relative;
+  z-index: 10;
   color: #0066cc;
   font-size: 21px;
   line-height: 24px;
 }
-section.main_section .unit_copy_wrapper .cta_link span {}
-section.main_section .unit_copy_wrapper .cta_link span.name {}
-section.main_section .unit_copy_wrapper .cta_link span.icon {}
+
+section.main_section .unit_copy_wrapper .cta_links a.cta_link::after {
+  content: '';
+  display: inline-block;
+  vertical-align: top;
+  padding-left: 0.3em;
+}
+
+/* section.main_section .unit_copy_wrapper .cta_links a.cta_link:hover {
+  text-decoration: underline;
+} */
+
+section.main_section .unit_copy_wrapper .cta_links a.cta_link::before {
+  content: '';
+  position: absolute;
+  bottom: -2px;
+  left: 0;
+  width: 0;
+  border-top: 2px solid #0066cc;
+  transition: width 160ms ease-in-out;
+  -webkit-transition: width 160ms ease-in-out;
+  -moz-transition: width 160ms ease-in-out;
+}
+
+section.main_section .unit_copy_wrapper .cta_links a.cta_link:hover::before {
+  width: calc(100% - 16px);
+}
 
 
+section.main_section .unit_copy_wrapper a.cta_link span {}
+section.main_section .unit_copy_wrapper a.cta_link span.name {}
+section.main_section .unit_copy_wrapper a.cta_link span.icon {}
 
 section.main_section .unit_image_wrapper {}
+
+section.main_section .unit_image_wrapper .unit_image {
+  position: absolute;
+  bottom: 0;
+  left: 50%;
+  background-repeat: no-repeat;
+  transform: translateX(-50%);
+}
+
+#hero--macbook_air_15 .unit_image {
+  width: 3008px;
+  height: 736px;
+  background-size: 3008px 736px;
+  background-image: url(/assets/img/hero_01_macbook_air_15.jpg);
+}
+
+#hero--vision_pro .unit_image {
+  width: 3008px;
+  height: 736px;
+  background-size: 3008px 736px;
+  background-image: url(/assets/img/hero_02_apple_vision_pro.jpg);
+}
+
+#hero--iphone_14_pro .unit_image {
+  width: 3008px;
+  height: 736px;
+  background-size: 3008px 736px;
+  background-image: url(/assets/img/hero_03_iphone14pro.jpg);
+}
