--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -719,6 +719,16 @@ section#promotion_section.main_section .section_list_wrapper .section_list .sect
   height: 100%;
 }
 
+section#promotion_section.main_section .section_list_wrapper .section_list #promo--vision_pro.section_item .unit_container {
+  overflow: hidden;
+  position: relative;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: flex-end;
+}
+
 
 section#promotion_section.main_section .unit_copy_wrapper {
   padding-top: 53px;
@@ -743,6 +753,7 @@ section#promotion_section.main_section .unit_copy_wrapper p.callout {
   margin-top: 12px;
   font-size: 17px;
   line-height: 21px;
+  text-align: center;
 }
 
 section#promotion_section.main_section .unit_copy_wrapper h2.headline + h3.subhead {
@@ -768,65 +779,73 @@ section#promotion_section.main_section .unit_copy_wrapper .cta_links a.cta_link:
   width: calc(100% - 12px);
 }
 
-#promo--iPhone_14 .unit_image {
+section#promotion_section.main_section .unit_image_wrapper .unit_image {
   width: 1262px;
   height: 580px;
   background-size: 1262px 580px;
+  background-repeat: no-repeat;
+}
+
+#promo--iPhone_14 .unit_image {
   background-image: url(/assets/img/promo_01_iphone14_yellow_2x.jpg);
 }
 
 #promo--vision_pro .unit_image {
-  width: 1262px;
-  height: 580px;
-  background-size: 1262px 580px;
   background-image: url(/assets/img/promo_02_apple_vision_pro_2x.jpg);
 }
 
 #promo--watch .unit_image {
-  width: 1262px;
-  height: 580px;
-  background-size: 1262px 580px;
   background-image: url(/assets/img/promo_03_apple_watch_series_8_2x.jpg);
 }
 
 #promo--iPad_pro .unit_image {
-  width: 1262px;
-  height: 580px;
-  background-size: 1262px 580px;
   background-image: url(/assets/img/promo_04_ipadpro_refresh_2x.jpg);
 }
 
 #promo--trade_in .unit_image {
-  width: 1262px;
-  height: 580px;
-  background-size: 1262px 580px;
   background-image: url(/assets/img/promo_05_iphone_tradein_2x.jpg);
 }
 
 #promo--card .unit_image {
-  width: 1262px;
-  height: 580px;
-  background-size: 1262px 580px;
   background-image: url(/assets/img/promo_06_apple_card_2x.jpg);
 }
 
 #promo--vision_pro.section_item .unit_copy_wrapper h2.headline.vision_pro_logo {
-  width: 235px;
-  height: 48px;
-  background-size: 235px 48px;
-  background-image: url(/assets/img/hero_logo_apple_vision_pro__ea9qv4w4cngy_mediumtall.png);
+  width: 196px;
+  height: 41px;
+  background-size: 196px 41px;
+  background-repeat: no-repeat;
+  background-image: url(/assets/img/logo_apple_vision_pro_2x.png);
 }
 
-/* section#promotion_section.main_section #promo--vision_pro.section_item .unit_container .unit_copy_wrapper {
+#promo--vision_pro.section_item .unit_copy_wrapper h2.headline.vision_pro_logo + .subhead {
+  margin-top: 0;
+}
+
+section#promotion_section.main_section #promo--vision_pro.section_item .unit_container .unit_copy_wrapper {
   padding-top: initial;
   padding-bottom: 55px;
-} */
+}
 
 #promo--watch.section_item .unit_copy_wrapper h2.headline.watch_logo {
-  width: 140px;
-  height: 52px;
-  background-size: 140px 52px;
+  width: 137px;
+  height: 51px;
+  background-size: 137px 51px;
   background-image: url(/assets/img/logo_apple_watch_series_8_2x.png);
+}
+
+section#promotion_section.main_section .unit_copy_wrapper h3.subhead span.logo.logo_ipad_pro_m2_chip {
+  display: inline-block;
+  vertical-align: middle;
+  width: 37px;
+  height: 37px;
+  background-size: 37px 37px;
+  background-repeat: no-repeat;
+  background-image: url(/assets/img/logo_m2_chip_2x.png);
+}
+
+#promo--watch.section_item .unit_copy_wrapper h2.headline.watch_logo .subhead {
+  margin-top: 11px;
 }
 
 section.main_section #promo--watch.section_item .unit_copy_wrapper {
@@ -838,21 +857,59 @@ section.main_section #promo--iPad_pro.section_item .unit_copy_wrapper {
 }
 
 #promo--card.section_item .unit_copy_wrapper h2.headline.card_logo {
-  width: 110px;
+  width: 108px;
   height: 33px;
-  background-size: 110px 33px;
+  background-size: 108px 33px;
   background-image: url(/assets/img/logo_card_2x.png);
 }
 
 #promo--trade_in.section_item .unit_copy_wrapper h2.headline.trade_in_logo {
-  width: 150px;
-  height: 30px;
-  background-size: 150px 30px;
+  width: 155px;
+  height: 32px;
+  background-size: 155px 32px;
   background-image: url(/assets/img/logo_tradein_2x.png);
 }
 
-@media only screen and (max-width: 600px) {
+@media only screen and (max-width: 1024px) {
   section#promotion_section.main_section .section_list_wrapper .section_list .section_item {
     width: 100%
   }
+}
+
+
+section#gallery_section.main_section {}
+section#gallery_section.main_section .gallery {}
+section#gallery_section.main_section .gallery ul.gallery_indicator{
+  display: flex;
+  width: 100%;
+  height: 40px;
+  justify-content: center;
+  align-items: center;
+}
+section#gallery_section.main_section .gallery ul.gallery_indicator li {
+  width: 8px;
+  height: 8px;
+  margin-right: 7px;
+  margin-left: 7px;
+  line-height: 8px;
+}
+section#gallery_section.main_section .gallery ul.gallery_indicator li button.indicator_button {
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  text-indent: -9999rem;
+  background-color: rgba(0, 0, 0, 0.4);
+  cursor: pointer;
+  transition: background-color 180ms ease-in-out;
+  -webkit-transition: background-color 180ms ease-in-out;
+  -moz-animation: background-color 180ms ease-in-out;;
+}
+
+section#gallery_section.main_section .gallery ul.gallery_indicator li button.indicator_button:hover {
+  background-color: rgba(0, 0, 0, 0.6);
+}
+
+section#gallery_section.main_section .gallery ul.gallery_indicator li.active button.indicator_button {
+  background-color: #000000;
+  cursor: default;
 }
